--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "wedding-website",
   "version": "1.0.0",
   "description": "A wedding website with loads of features.",
+  "homepage": "https://ironsoul0.github.io/wedding-website",
   "main": "npmfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d ./"
   },
   "repository": {
     "type": "git",
@@ -17,8 +19,9 @@
   ],
   "author": "Ram Patra",
   "license": "GPL-3.0",
-  "homepage": "https://github.com/rampatra/wedding-website",
   "devDependencies": {
+    "browser-sync": "^2.26.3",
+    "gh-pages": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^4.0.2",
